[package]
name = "moqtail-mosquitto"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Placeholder crate for the Mosquitto plugin"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
moqtail-core = { path = "../../crates/moqtail-core" }

[build-dependencies]
cc = "1"
bindgen = "0.69"
